# engineering-calculation-system-skill-pack-v2.0.0-2

./: .gitignore
.opencode/: AGENTS.md  (+2 more)
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/: README.md  pyproject.toml
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/analysis/01_source_inventory/: source_inventory.yaml
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/analysis/02_logic_blueprint/: method_selection_matrix.csv
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/analysis/06_user_interaction/: user_interaction_decisions.csv
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/deploy/: env.example  one_click_deploy.sh
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/handoff/: coding_go_no_go.md  implementation_handoff.yaml
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/release/: release_checklist.md
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/verification/: golden_case_registry.csv  test_matrix.csv
engineering-calculation-system/core/engineering-calculation-system/project_template/engineering_calc_project/webapp/: .gitkeep  app.py  config.py  form_utils.py  i18n.py  routes.py
(+643 files in other folders)
